# vomtu

./: .gitignore  .mcp.json  VOMTU_LANDING_BRIEF_ANTIGRAVITY.md  admin.html  brief.html  casos.html  fix_n8n_nginx.sh  gracias.html  index.html  llms.txt  main.js  manage_vomtu.py  planes.html  privacidad.html  robots.txt  setup_vps.sh  sitemap.xml  style.css  terminos.html  testimonios.html
.agents/: AGENTS.md
clients/: camisetas3hermanos.md  jaime.md  laborathion.md  one_agency.md  somospasion.md  velyn.md
design-system/: MASTER.md
ig-prospector-mcp/: .env.example  .gitignore  README.md  pyproject.toml
ig-prospector-mcp/src/ig_prospector/: apify_client.py  firecrawl_client.py  outreach.py  scoring.py  server.py  storage.py
scratch/: animate.py  fix_favicon.py  fix_favicon_v2.py
